# polling_api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
nginx/: default.conf
polling/: .env  db.sqlite3
polling/api/: models.py  serializers.py  urls.py  views.py
polling/api/migrations/: 0001_initial.py
polling/api/static/: openapi-schema.yml
polling/polling/: settings.py  urls.py
polling/templates/: redoc.html
